--- a/package.json
+++ b/package.json
@@ -26,24 +26,36 @@
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-2": "^6.5.0",
+    "css-loader": "^0.23.1",
     "expect": "^1.20.1",
     "file-loader": "^0.8.5",
+    "isomorphic-fetch": "^2.2.1",
     "jsdom": "^9.1.0",
     "material-ui": "^0.15.0",
     "mocha": "^2.4.5",
     "mocha-jsdom": "^1.1.0",
     "react": "^15.0.2",
     "react-addons-test-utils": "^15.0.2",
+    "react-bootstrap": "^0.29.4",
     "react-dom": "^15.0.2",
+    "react-flexbox-grid": "^0.9.6",
     "react-hot-loader": "^1.3.0",
     "react-redux": "^4.4.5",
     "react-router": "^2.4.1",
     "react-router-redux": "^4.0.4",
+    "react-tap-event-plugin": "^1.0.0",
     "redux": "^3.5.2",
     "redux-logger": "^2.6.1",
     "redux-thunk": "^2.1.0",
     "semistandard": "^8.0.0",
+    "style-loader": "^0.13.1",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1"
+  },
+  "semistandard": {
+    "globals": [
+      "d3"
+    ]
   }
 }
