--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "babel-preset-stage-2": "^6.5.0",
     "css-loader": "^0.23.1",
     "expect": "^1.20.1",
+    "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
+    "html-webpack-plugin": "^2.19.0",
     "isomorphic-fetch": "^2.2.1",
     "jsdom": "^9.1.0",
     "mocha": "^2.4.5",
@@ -55,5 +57,8 @@
     "globals": [
       "d3"
     ]
+  },
+  "dependencies": {
+    "webpack": "^1.13.1"
   }
 }
